--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,10 @@ cmake_minimum_required(VERSION 3.27)
 project(Chat-cpp)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED On)
-set(CMAKE_EXPORT_COMPILE_COMMANDS On)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_BUILD_TYPE Debug)
 
 add_subdirectory(src)
-# add_subdirectory(tests)
-
+add_subdirectory(tests)
 
