--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,20 @@
 project($CMAKE_PROJECT_NAME)
 
+add_subdirectory(Channel)
+
 find_package(Curses REQUIRED)
 
 include_directories(${CURSES_INCLUDE_DIRS})
 
 include(FetchContent)
 
-include(FetchContent)
-
 FetchContent_Declare(asio
-  GIT_REPOSITORY https://github.com/chriskohlhoff/asio.git
+  # GIT_REPOSITORY https://github.com/chriskohlhoff/asio.git
+  GIT_REPOSITORY git@github.com:chriskohlhoff/asio.git
   GIT_TAG master
   CONFIGURE_COMMAND ""
   BUILD_COMMAND ""
-  )
+)
 
 FetchContent_GetProperties(asio)
 if(NOT asio_POPULATED)
